# embeddedjourney

./: .clang-tidy  CmakeLists.txt  README.md
include/: practice2504.h  practice25041.h
include/embeddedjourney/: addressgame.h  pointerwalk.h  practice2604.h  practice2704.h
src/: addressgame.c  pointerwalk.c  practice2504.c  practice25041.c  practice2604.c  practice2704.c
tests/: CMakeLists.txt  test_practice2504.c  test_practice25041.c  test_practice2604.c  test_practice2704.c  test_runner.c
unity/: Makefile
